--- a/zillowmap.ipynb
+++ b/zillowmap.ipynb
@@ -362,8 +362,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fd3054e4-3ce7-4452-b3f0-df75e15a8995",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Geographic 2D CRS: GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\" ...>\n",
+       "Name: WGS 84\n",
+       "Axis Info [ellipsoidal]:\n",
+       "- lon[east]: Longitude (Degree)\n",
+       "- lat[north]: Latitude (Degree)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Datum: World Geodetic System 1984\n",
+       "- Ellipsoid: WGS 84\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the ca crs \n",
+    "ca.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "94dcd8fd-9deb-4cc4-a136-c6e0811a6a11",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if the crs match\n",
+    "ca.crs == zillowmap.crs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec95c95-4a39-4661-8fe7-aaf1b219c56d",
+   "metadata": {},
+   "source": [
+    "### CRS mATCHING \n",
+    "The CRS of the Zillowmap and the CA boundary do not match. To decide what CRS to keep we'll explore whether the CRS of each geodata is projected versus geographic. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9c666c62-f434-4acf-925b-198955c076d4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if zillowmap is in a projected CRS\n",
+    "zillowmap.crs.is_projected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6779ec4-1752-472f-856e-973cf6cfcee6",
+   "metadata": {},
+   "source": [
+    "We'll keep the CRS of the Zillowmap since its projected and much larger than the California boundary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "92f1973d-5e06-4549-9e44-ff731683f6d8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# change the CA boundary to the zillowmap CRS\n",
+    "ca = ca.to_crs(zillowmap.crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a174e93b-cf45-439f-8cbf-fb34b5caa544",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Use an assert statement to make sure the CRS match\n",
+    "assert ca.crs == zillowmap.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f09f7d0-5880-4d7b-8ed5-1314bf02e5a5",
    "metadata": {},
    "outputs": [],
    "source": []
