Update markdown cells

--- a/interactive_analysis.ipynb
+++ b/interactive_analysis.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3241eb50",
+   "metadata": {},
+   "source": [
+    "This notebook will combine SCE utility, census tracts, and building footprints, in an attempt to create an interactive plot."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a467d2ab",
    "metadata": {},
    "outputs": [],
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "28f7c651",
    "metadata": {},
    "outputs": [],
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "684ac44e",
    "metadata": {},
    "outputs": [],
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "97399193",
    "metadata": {},
    "outputs": [],
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "aeba07fd",
    "metadata": {},
    "outputs": [],
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "8fb53374",
    "metadata": {},
    "outputs": [],
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "1e1aa1dd",
    "metadata": {},
    "outputs": [],
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "72842ea3",
    "metadata": {},
    "outputs": [],
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "2561de43",
    "metadata": {},
    "outputs": [],
@@ -149,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "aeee9458",
    "metadata": {},
    "outputs": [],
@@ -166,7 +174,7 @@
    "id": "913ce3cf",
    "metadata": {},
    "source": [
-    "**If the map isn't loading, create a markdown cell below the map cell. If there already is a markdown cell, change it to a code cell, then back to a markdown cell. No idea why this fixes the interactive map lol.**"
+    "**If the map isn't loading correctly, create a markdown cell below the map cell. If there already is a markdown cell, change it to a code cell, then back to a markdown cell and this should fix the map.**"
    ]
   },
   {
